--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,154 @@
-h1 {
-	color: red;
+@font-face {
+    font-family: 'OpenSans';
+    src: url('fonts/OpenSans-Regular.ttf') format('truetype'),
+        url('fonts/OpenSans-Regular.woff') format('woff'),
+        url('fonts/OpenSans-Regular.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
+@font-face {
+    font-family: 'OpenSans';
+    src: url('fonts/OpenSans-Light.ttf') format('truetype'),
+        url('fonts/OpenSans-Light.woff') format('woff'),
+        url('fonts/OpenSans-Light.svg') format('svg');
+    font-weight: 300;
+    font-style: normal;
+}
+
+body {
+	background: #F3F3F3;
+}
+
+body * {
+	font-family: 'OpenSans', Helvetica, Arial, sans-serif;
+	color: #566273;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	margin: 0;
+}
+
+h1 {
+	font-size: 46px;
+	margin-bottom: 20px;
+	font-weight: 300;
+}
+
+h2 {
+	font-size: 18px;
+	margin-bottom: 10px;
+	font-weight: 300;
+}
+
+h5 {
+	font-size: 14px;
+	font-style: italic;
+}
+
+p {
+	font-size: 14px;
+}
+
+.subtext {
+	color: #8D97A6;
+}
+
+/*-------------*/
+
+
+#body-column {
+	width: 100%;
+	max-width: 700px;
+	margin: 0 auto;
+}
+
+/* Header */
+
+#header-block {
+	width: 100%;
+	margin: 50px 0;
+	text-align: center;
+}
+
+.header-image {
+	height: 300px;
+	width: 300px;
+	display: inline-block;
+	overflow: hidden;
+}
+.header-image img {
+	width: 100%;
+	height: auto;
+}
+
+/* Episodes */
+
+#episodes-block {
+	padding: 20px;
+	margin-bottom: 50px;
+	background-color: rgba( 255,255,255,0.5);
+}
+
+.episode {
+	padding: 20px 0;
+}
+.episode:not(:last-child) {
+	border-bottom: 1px solid #B8C0CC;
+}
+
+.episode-image,
+.episode-content {
+	display: inline-block;
+	vertical-align: top;
+}
+
+.episode-image {
+	height: 250px;
+	width: 250px;
+	margin-right: 25px;
+}
+.episode-image img {
+	width: 100%;
+	height: auto;
+}
+
+.episode-content {
+	height: 250px;
+	width: calc( 100% - 280px );
+}
+
+.episode-player {
+	width: 100%;
+}
+
+@media (max-width: 500px) {
+
+	/* TODO: ADD HEADER BLOCK STYLING*/
+
+	/* TODO: ADD TEXT SIZE STYLING*/
+	
+	#episodes-block {
+		padding: 10px 20px;
+		margin-bottom: 20px;
+	}
+
+	.episode {
+		padding: 10px 0;
+	}
+
+	.episode-image {
+		height: 100px;
+		width: 100px;
+		margin-right: 10px;
+	}
+
+	.episode-content {
+		height: 100px;
+		width: calc( 100% - 115px );
+	}
+
+	.episode-content p {
+		display: none;
+	}
+}
+
